# PyNotes

./: .gitignore  LICENSE.txt  README.md  pynotes.ini  pynotes.py  pyproject.toml
src/pynotes-cli/: main.py
tests/: test_main.py
