[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pynotes-cli"
version = "0.1.0"
description = "A simple utility designed to make note taking in the terminal easy"
readme = "README.md"
authors = [{name = "Jordan Del Pilar", email = "jordan@delpilar.net"}]
license = { file = "LICENSE.txt" }
requires-python = ">=3.9"
dependencies = []

[project.scripts]
pynotes = "pynotes.main:main"

[tool.setuptools.packages.find]
where = ["src"]

